I kinda feel bad for claude at this point, btu its not how i want it so im going to keep harassing it
